<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.soldev.fieldservice.TaskFormEquipmentTabFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/llMachine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlue"
                android:padding="10dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_machine"
                    android:textAppearance="@style/CustomTitle"/>
                <ImageButton
                    android:id="@+id/imgNew"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:src="@drawable/baseline_add_circle_outline_white_36"
                    android:background="#00000000"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMachineList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">


            </androidx.recyclerview.widget.RecyclerView>
            <LinearLayout
                android:id="@+id/llTool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorBlue"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_tools"
                    android:textAppearance="@style/CustomTitle"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:padding="5dp">
                <TextView
                    android:id="@+id/txtEquipmentDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_item"
                    android:layout_weight="1"
                    android:textAppearance="@style/CustomEditTextDisplay"/>
                <TextView
                    android:id="@+id/txtEquipmentUnits"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_units"
                    android:textAppearance="@style/CustomEditTextDisplay"
                    android:gravity="clip_horizontal"/>
                <TextView
                    android:id="@+id/txtEquipmentBefore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_before"
                    android:layout_weight="1.8"
                    android:textAppearance="@style/CustomEditTextDisplay"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/txtEquipmentAfter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_after"
                    android:layout_weight="1.8"
                    android:textAppearance="@style/CustomEditTextDisplay"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llEquiptmentList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>