<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorHeadBackGround">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_head"
            android:layout_centerVertical="true"
            android:layout_marginBottom="3sp"/>
        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1.0"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_xtiny"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cccc"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/text_size_small"
        android:textColorHint="#000000"
        android:drawableRight="@drawable/baseline_settings_black_18"
        android:drawablePadding="5dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/btSignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_no_signal"
        android:textSize="@dimen/text_button_label"
        android:drawableTop="@drawable/baseline_signal_cellular_null_black_36"
        android:background="#00000000"
        android:layout_toLeftOf="@+id/btCancel"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"/>
    <Button
        android:id="@+id/btCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cancel_task"
        android:textSize="@dimen/text_button_label"
        android:drawableTop="@drawable/baseline_cancel_black_36"
        android:background="#00000000"
        android:layout_toLeftOf="@+id/btSave"
        android:visibility="visible"
        android:layout_centerVertical="true"/>
    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_save_task"
        android:textSize="@dimen/text_button_label"
        android:drawableTop="@drawable/baseline_save_black_36"
        android:background="#00000000"
        android:layout_toLeftOf="@+id/btSubmit"
        android:layout_centerVertical="true"/>
    <Button
        android:id="@+id/btSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_send_task"
        android:textSize="@dimen/text_button_label"
        android:drawableTop="@drawable/baseline_double_arrow_black_36"
        android:background="#00000000"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>